fix(CanvasForm): Remove double scrollbar
After upgrading to Patternfly v6, the `Card` component has `padding-block-start` and `padding-block-end` CSS properties set to `0.5rem` and that's generating an additional scrollbar in the form.

The fix is to set those properties to 0 for the Form scope.

fix: https://github.com/KaotoIO/kaoto/issues/1944

--- a/packages/ui/src/components/Visualization/Canvas/CanvasSideBar.scss
+++ b/packages/ui/src/components/Visualization/Canvas/CanvasSideBar.scss
@@ -1,9 +1,11 @@
-.pf-topology-resizable-side-bar {
+// Fix for: https://github.com/KaotoIO/kaoto/issues/1944
+#topology-resize-panel {
+  --pf-v6-c-drawer__panel--PaddingBlockStart: 0;
+  --pf-v6-c-drawer__panel--PaddingBlockEnd: 0;
+}
+
+.canvas-sidebar {
   width: calc(100% - 10px);
   position: absolute;
   height: 100%;
-}
-/* stylelint-disable-next-line selector-class-pattern */
-.pf-v6-c-drawer__splitter pf-m-vertical {
-  border: none;
 }
